--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,72 @@ p {
     padding: 0;
 }
 
+/* ======== MENU TOGGLE ==== */
+.menu-toggle {
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+}
+
+@media (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
+    background-color: #3f51b5;
+    z-index: 999;
+
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    color: #fff;
+}
+
+.mobile-menu {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.mobile-menu .link {
+    display: block;
+    padding: 10px;
+    color: #fff;
+    text-decoration: none;
+}
+
 
 /* ==========------========== */
 .container {
@@ -102,10 +168,265 @@ p {
 }
 
 /* ========= HEADER ========= */
+.menu-toggle {
+    margin-left: auto;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+}
 
+@media only screen and (min-width: 768px) {
+    .menu-toggle {
+        display: none;
+    }
+}
+
+.header-box {
+    width: 1158px;
+    margin: 0 auto;
+    display: flex;
+    padding: 25px 0;
+}
+
+.header-section {
+    padding: 24px 0;
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1158px) {
+    .header-section {
+        padding-top: 6px;
+        padding-bottom: 6px;
+    }
+}
+
+.nav-section {
+    display: flex;
+    align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+    .nav-section {
+        justify-content: space-between;
+    }
+}
+
+.logo-header {
+    margin-right: 76px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4D5AE5;
+}
+
+.flex-block {
+    display: flex;
+}
+
+
+
+.nav-list {
+    display: flex;
+    gap: 40px;
+}
+
+@media only screen and (max-width: 768px) {
+    .nav-list {
+        display: none;
+    }
+}
+
+.link-header {
+    box-sizing: border-box;
+    position: relative;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    padding: 28px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.link-header.active::after {
+    background-color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-header::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    /* left: 0px; */
+    /* top: 44px; */
+    border-radius: 2px;
+
+}
+
+.list-item {
+    position: relative;
+}
+
+.active {
+    color: #404BBF;
+}
+
+/* .active::after {
+    background-color: #404bbf;
+
+} */
+
+.link-header:hover,
+.link-header:focus {
+    color: #404bbf
+}
+
+.address-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+    column-gap: 40px;
+}
+
+@media only screen and (min-width: 1158px) {
+    .address-list {
+        flex-direction: row;
+    }
+}
+
+.address {
+    margin-left: auto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+@media only screen and (max-width: 768px) {
+    .address {
+        display: none;
+    }
+}
+
+.address-item {
+    color: #434455;
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address-item:hover,
+.address-item:focus {
+    color: #404bbf;
+}
 
 /* ========== HERO ========== */
+.hero-section {
+    background-color: #2E2F42;
+    background-image:
+        linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+        url(../images/bg-hero.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 188px 0;
+    max-width: 1440px;
+    margin: 0 auto;
+    margin-bottom: 96px;
+}
 
+@media only screen and (min-width: 1158px) {
+    .hero-section {
+        margin-bottom: 120px;
+    }
+}
+
+.hero-block {
+    display: block;
+    width: 360px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .hero-block {
+        width: 556px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .hero-block {
+        width: ;
+    }
+}
+
+.hero-title {
+    max-width: 496px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    line-height: 1.12;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin: 0 auto 72px;
+}
+
+@media only screen and (min-width: 768px) {
+    .hero-title {
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 36px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .hero-title {
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 48px;
+    }
+}
+
+.modal-button {
+    display: block;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    font-size: 16px;
+    color: #ffffff;
+    background-color: #4D5AE5;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    margin: 0 auto;
+    min-width: 169px;
+    height: 56px;
+    transition:
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: none;
+}
+
+.modal-button:hover,
+.modal-button:focus {
+    background-color: #404BBF
+}
 
 /* ========== POSSIBILITIES ========== */
 .possibilities-section {
