--- a/css/styles.css
+++ b/css/styles.css
@@ -936,10 +936,9 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 72px;
-    /* align-items: baseline; */
+    /* row-gap: 72px; */
     margin: 0 auto;
-    /* width: 1158px; */
+
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1158px) {
