--- a/css/styles.css
+++ b/css/styles.css
@@ -119,18 +119,11 @@ p {
 
 
 
-.mobile-menu,
+
 .link {
-    display: block;
-    /* padding: 10px; */
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 40px;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2E2F42;
+
+
+
     text-decoration: none;
 }
 
@@ -141,7 +134,20 @@ p {
     padding: 0;
     margin: 0;
     list-style: none;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+
 }
+
+.mobile-menu-link {
+    color: #2E2F42;
+}
+
 
 /* ----------- ----------- */
 .toggle-menu-container {
@@ -360,6 +366,15 @@ p {
     column-gap: 40px;
 }
 
+@media only screen and (min-width: 768px) {
+    .address-list {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+}
+
 @media only screen and (min-width: 1158px) {
     .address-list {
         flex-direction: row;
@@ -375,6 +390,8 @@ p {
     letter-spacing: 0.02em;
     color: #434455;
 }
+
+
 
 @media only screen and (max-width: 768px) {
     .address {
@@ -404,7 +421,7 @@ p {
     background-position: center;
     background-size: cover;
     padding: 188px 0;
-    min-width: 320px;
+    /* min-width: 320px; */
     /* max-width: 1440px; */
     margin: 0 auto;
     margin-bottom: 96px;
@@ -417,10 +434,11 @@ p {
 }
 
 .hero-block {
-    display: block;
-    width: 360px;
+    /* display: block; */
+    /* width: 360px; */
+    /* max-width: 300px; */
     margin: 0 auto;
-    text-align: center;
+    /* text-align: center; */
 }
 
 @media only screen and (min-width: 768px) {
@@ -436,11 +454,11 @@ p {
 }
 
 .hero-title {
-    min-width: 320px;
-    max-width: 496px;
+    /* min-width: 320px; */
+    max-width: 320px;
     text-align: center;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 32px;
     text-align: center;
     line-height: 1.12;
     letter-spacing: 0.02em;
@@ -454,6 +472,7 @@ p {
         font-size: 56px;
         line-height: 1.07;
         margin-bottom: 36px;
+        max-width: 596px;
     }
 }
 
@@ -522,6 +541,13 @@ p {
     column-gap: 24px;
 }
 
+@media only screen and (min-width: 1158px) {
+    .possibilities-list {
+        width: 100%;
+        flex-wrap: nowrap;
+    }
+}
+
 @media only screen and (min-width: 768px) {
     .possibilities-item {
         flex-basis: calc((100% - 24px) / 2);
@@ -531,7 +557,7 @@ p {
 
 @media only screen and (min-width: 1158px) {
     .possibilities-item {
-        flex-basis: calc((100% - 3*24px) / 4);
+        width: calc((100% - 72px) / 4);
 
     }
 }
@@ -600,6 +626,7 @@ p {
     flex-wrap: wrap;
     row-gap: 72px;
     column-gap: 24px;
+    /* width: 100%; */
 
 }
 
@@ -616,7 +643,20 @@ p {
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
-    flex-basis: calc((100% - 3 * 24px) / 4);
+
+}
+
+@media only screen and (min-width: 768px) {
+    .team-list {
+        margin: 0;
+        flex-basis: calc((100% - 24px) /2);
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .team-list {
+        flex-basis: calc((100% - 72px) / 4);
+    }
 }
 
 .list-description {
@@ -1209,15 +1249,6 @@ p {
         margin-right: 24px;
     }
 }
-
-/* .footer-email {
-    position: absolute;
-    top: 0;
-    left: 16px;
-    transform: translateY(50%);
-} */
-
-/* .btn-footer-container{} */
 
 .btn-footer-submit {
     position: relative;
