--- a/css/styles.css
+++ b/css/styles.css
@@ -74,17 +74,26 @@ p {
 
     margin: 0;
     padding: 0;
-    background-color: transparent;
+    /* background-color: transparent; */
     cursor: pointer;
     border: none;
     border-radius: 50%;
     outline: none;
+    background-color: rgba(222, 17, 17, 0.964);
 }
 
 @media (min-width: 768px) {
     .menu-toggle {
         display: none;
     }
+}
+
+.close-menu-icon {
+    /* width: 40px;
+    height: 40px; */
+    /* border-radius: 50%; */
+    /* fill: #2E2F42; */
+    /* background-color: rgba(0, 0, 0, 0.1); */
 }
 
 .menu-toggle:hover,
@@ -117,13 +126,7 @@ p {
     color: #fff;
 }
 
-
-
-
 .link {
-
-
-
     text-decoration: none;
 }
 
@@ -147,7 +150,6 @@ p {
 .mobile-menu-link {
     color: #2E2F42;
 }
-
 
 /* ----------- ----------- */
 .toggle-menu-container {
@@ -233,6 +235,12 @@ p {
 
     }
 }
+
+/* @media only screen and (min-width: 1158px) {
+    .tablet-container {
+        padding: 0;
+    }
+} */
 
 /* ========= HEADER ========= */
 .menu-toggle {
@@ -630,6 +638,18 @@ p {
 
 }
 
+@media only screen and (min-width: 1158px) {
+    .team-cards {
+        column-gap: 18px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .team-cards {
+        flex-wrap: nowrap;
+    }
+}
+
 .card-box {
     padding: 32px 0;
     justify-content: center;
@@ -655,7 +675,7 @@ p {
 
 @media only screen and (min-width: 1158px) {
     .team-list {
-        flex-basis: calc((100% - 72px) / 4);
+        flex-basis: calc((100% - 102px) / 4);
     }
 }
 
